<resources>
    <string name="app_name">CoWin Vaccine Notifier</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="center_name">Center Name :</string>
    <string name="center_address">Center Address :</string>
    <string name="dose_1">DOSE 1 :</string>
    <string name="dose_2">DOSE 2 :</string>
    <string name="your_name">Your Name</string>
    <string name="your_pincode">Your Pincode</string>
    <string name="pincode">Pincode</string>
    <string name="date">Date</string>
    <string name="cowin_service_notification_channel_id">cowin_channel</string>
    <string name="covishield">COVISHIELD</string>
    <string name="covaxin">COVAXIN</string>
    <string name="moderna">MODERNA</string>
    <string name="sputnik_v">SPUTNIK-V</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="_18plus">18+</string>
    <string name="_45plus">45+</string>
    <string name="eighteen">18</string>
    <string name="fortyFive">45</string>
    <string name="select_fee">Select Fee</string>
    <string name="filter_options">Filter Options</string>
    <string name="select_age">Select Age</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="select_vaccine">Select Vaccine</string>
</resources>