<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textCenterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/center_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/centerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/textCenterName"
        app:layout_constraintStart_toEndOf="@id/textCenterName"
        app:layout_constraintBottom_toBottomOf="@id/textCenterName"
        tools:text="Bhimprore H S. Daman Resid Only"
        android:textColor="#868686"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textCenterAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textCenterName"
        app:layout_constraintStart_toStartOf="@id/textCenterName"
        android:text="@string/center_address"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/centerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/textCenterAddress"
        app:layout_constraintStart_toEndOf="@id/textCenterAddress"
        app:layout_constraintBottom_toBottomOf="@id/textCenterAddress"
        tools:text="Bhimprore School Main Road"
        android:textColor="#868686"
        android:layout_marginStart="8dp"/>
    <TextView
        android:id="@+id/textDose1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose_1"
        app:layout_constraintTop_toBottomOf="@id/textCenterAddress"
        app:layout_constraintStart_toStartOf="@id/textCenterAddress"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dose1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="132"
        app:layout_constraintTop_toTopOf="@id/textDose1"
        app:layout_constraintStart_toEndOf="@id/textDose1"
        android:layout_marginStart="8dp"
        android:textColor="#41BE06"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textDose2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose_2"
        app:layout_constraintTop_toBottomOf="@id/textDose1"
        app:layout_constraintStart_toStartOf="@id/textDose1"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dose2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="0"
        app:layout_constraintTop_toTopOf="@id/textDose2"
        app:layout_constraintStart_toEndOf="@id/textDose2"
        android:layout_marginStart="8dp"
        android:textColor="#41BE06"
        android:textSize="20sp"/>
    <LinearLayout
        android:id="@+id/tagView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textDose2"
        app:layout_constraintStart_toStartOf="@id/textDose2"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">


<ImageView
    android:id="@+id/price_tag"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/free_tag"
    android:layout_marginStart="8dp"
    />

        <ImageView
            android:id="@+id/vaccine_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/free_tag"
            android:layout_marginStart="8dp"
            />
        <ImageView
            android:id="@+id/age_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/free_tag"
            android:layout_marginStart="8dp"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>